<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="@drawable/preference_background_bottom"
    android:baselineAligned="false"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@android:id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:importantForAccessibility="no" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@android:id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:maxLines="2"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            tools:text="@string/pref_version" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@android:id/summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:ellipsize="marquee"
            android:maxLines="8"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?android:textColorSecondary"
            tools:text="@string/pref_version_number" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/check_updates"
        style="@style/Widget.Material3Expressive.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:text="@string/update_checker_button"
        android:textColor="?attr/colorOnTertiaryContainer"
        app:backgroundTint="?attr/colorTertiaryContainer"
        app:icon="@drawable/ic_update"
        app:iconTint="?attr/colorOnTertiaryContainer" />
</androidx.appcompat.widget.LinearLayoutCompat>